--- a/Web calculator/index.html
+++ b/Web calculator/index.html
@@ -3,7 +3,7 @@
     <script src="script.js" type="text/javascript">   
     </script>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="icon.jpg" />
+    <link rel="icon" type="image/x-icon" href="icon.png" />
 		<title>Web Calculator</title>
   </head>
   
